# ls_axon_segmentation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_cross_validation_splits.py  predict.py  pyproject.toml  test.py  train.py
configs/: config.yaml
configs/callbacks/: default.yaml
configs/data_module/: lm_data_module.yaml
configs/data_module/augmentation_transform/: default.yaml
configs/experiment/: ls_axon_segmentation.yaml  ls_axon_segmentation_alternative.yaml
configs/lightning_module/: lm_lightning_module.yaml
configs/local/: default.yaml.example
configs/loss/: cross_entropy.yaml  lovasz_softmax.yaml
configs/lr_scheduler/: multi_step_lr.yaml
configs/model/: u_net_en_encoders.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/trainer/: default.yaml
ls_axon_segmentation/: axon_radii_measurement.py  enums.py  inference.py  metrics.py  utils.py
ls_axon_segmentation/data_module/: __init__.py  lm_data_module.py
ls_axon_segmentation/lightning_module/: __init__.py  lm_lightning_module.py
ls_axon_segmentation/loss/: __init__.py  lovasz_losses.py
ls_axon_segmentation/transform/: __init__.py  augmentation.py  preprocessing.py  stain_augmentation.py
tests/shell/: test_basic_commands.py
